osd: do not assert on fast shutdown timeout

Fixes: https://tracker.ceph.com/issues/61140

Signed-off-by: Igor Fedotov <igor.fedotov@croit.io>
(cherry picked from commit f004def5b7cb8aa31e7f428f5be9bcf1aee2f30c)